--- a/udagram/udagram-api/.elasticbeanstalk/config.yml
+++ b/udagram/udagram-api/.elasticbeanstalk/config.yml
@@ -1,40 +1,21 @@
-# branch-defaults:
-#   default:
-#     environment: udagram-api-dev
-# environment-defaults:
-#   udagram-api-dev:
-#     branch: null
-#     repository: null
-# global:
-#   application_name: udagram-api
-#   branch: null
-#   default_ec2_keyname: mykeypair
-#   default_platform: Node.js 14 running on 64bit Amazon Linux 2
-#   default_region: us-east-1
-#   include_git_submodules: true
-#   instance_profile: null
-#   platform_name: null
-#   platform_version: null
-#   profile: default
-#   repository: null
-#   sc: null
-#   workspace_type: Application
-
 branch-defaults:
   default:
     environment: udagram-api-dev
-    group_suffix: null
+environment-defaults:
+  udagram-api-dev:
+    branch: null
+    repository: null
 global:
-  application_name: 
+  application_name: udagram-api
   branch: null
-  default_ec2_keyname:
+  default_ec2_keyname: mykeypair
   default_platform: Node.js 14 running on 64bit Amazon Linux 2
   default_region: us-east-1
   include_git_submodules: true
   instance_profile: null
   platform_name: null
   platform_version: null
-  profile: null
+  profile: default
   repository: null
   sc: null
   workspace_type: Application
